2008-05-12  Paul Goins  <general@vultaire.net>

	* gtypist.texi: Updated FSF address, renamed links and removed some
	  obsolete ones, added mention of CPM scoring, updated command line
	  options section, added myself to the history section, and did some
	  minor reformatting.
	* ChangeLog: Minor formatting update.

2008-05-06  Paul Goins  <general@vultaire.net>

	* gtypist*.texi: Slightly modified so the manuals will correctly import
	  unaltered texinfo source for GPL and FDL.

2008-05-04  Paul Goins  <general@vultaire.net>

	* gpl.texi: Updated to GNU GPL v3
	* fdl.texi: Updated to GNU FDL v1.2

2003-10-31  Dmitry Rutsky  <rutsky@school.ioffe.rssi.ru>

	* gtypist.texi:  updated the information about the `M' command.

2003-10-25  Hynek Hanke  <hanke@volny.cz>

	* gtypist-cs.texi: Renamed from gtypist.cs.texi. The reason is not
	to cause automake errors related to invalid suffix.
	
	* gtypist.cs.texi: Include version2.texi, not version.texi, so that
	the auto-tools don't complain. It seems this is some ugly workaround
	for something, but it is advised in the documentation and it shouldn't
	break anything as ver*.texi files are generated automatically.	

	* Makefile.am: Handle also the HTML target so that we don't have
	to do it manually in autogen.sh.
	The target `all' now depends on target `info' AND `html'.

	* gtypist.cs.texi: Build into gtypist.cs.info, not gtypist.info.

2003-10-24  Hynek Hanke  <hanke@volny.cz>

	* gtypist.cs.texi: @documentencoding and @documentlanguage moved to the beginning
	of the file so that the auto-tools don't complain about it.

2003-09-28  Michael Opdenacker <michaelo@gnu.org>

	* gtypist*.texi: added a table of contents at the beginning
	* gtypist.texi: mentioned the lessons in Russian.
	* Makefile.am: now ships the html manuals in the source package.

2003-04-06  Felix Natter  <fnatter@gmx.net>

	* gtypist.texi: added documentation for M: command + mark old menus
	(K:) as deprecated

2002-06-28  Hynek Hanke  <hanke@volny.cz>
