@@ -2,8 +2,9 @@
  * GNU Typist  - interactive typing tutor program for UNIX systems
  * 
  * Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003  
- * 					Simon Baldwin (simonb@sco.com)
- * Copyright (C) 2003  GNU Typist Development Team <bug-gtypist@gnu.org>
+ *               Simon Baldwin (simonb@sco.com)
+ * Copyright (C) 2003, 2008
+ *               GNU Typist Development Team <bug-gtypist@gnu.org>
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
